; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libkern/os/extr_refcnt.c_os_ref_release_locked.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libkern/os/extr_refcnt.c_os_ref_release_locked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.os_refcnt = type { i64, i32 }

@REFLOG_RELEASE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @os_ref_release_locked(%struct.os_refcnt* %0) #0 {
  %2 = alloca %struct.os_refcnt*, align 8
  %3 = alloca i64, align 8
  store %struct.os_refcnt* %0, %struct.os_refcnt** %2, align 8
  %4 = load %struct.os_refcnt*, %struct.os_refcnt** %2, align 8
  %5 = getelementptr inbounds %struct.os_refcnt, %struct.os_refcnt* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  store i64 %6, i64* %3, align 8
  %7 = load %struct.os_refcnt*, %struct.os_refcnt** %2, align 8
  %8 = load i64, i64* %3, align 8
  %9 = call i32 @os_ref_check_underflow(%struct.os_refcnt* %7, i64 %8)
  %10 = load i64, i64* %3, align 8
  %11 = add nsw i64 %10, -1
  store i64 %11, i64* %3, align 8
  %12 = load %struct.os_refcnt*, %struct.os_refcnt** %2, align 8
  %13 = getelementptr inbounds %struct.os_refcnt, %struct.os_refcnt* %12, i32 0, i32 0
  store i64 %11, i64* %13, align 8
  %14 = load i64, i64* %3, align 8
  ret i64 %14
}

declare dso_local i32 @os_ref_check_underflow(%struct.os_refcnt*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
